<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDE0FF"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10dp"
                app:cardCornerRadius="@dimen/_15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSlot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center_horizontal"
                        android:text="@string/tvSlot"
                        android:textAlignment="center"
                        android:textColor="#0E0E0E"
                        android:textSize="@dimen/_35sp" />

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sp"
                        android:layout_marginLeft="@dimen/_10dp"
                        android:layout_marginTop="@dimen/_30sp"
                        android:text="@string/tvDate"
                        android:textSize="@dimen/_18sp" />

                    <EditText
                        android:id="@+id/etDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10dp"
                        android:layout_marginTop="@dimen/_10dp"
                        android:layout_marginEnd="@dimen/_10dp"
                        android:layout_marginBottom="@dimen/_10dp"
                        android:background="@drawable/spinner_back"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:ems="10"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/etDate"
                        android:inputType="date"
                        android:padding="@dimen/_15dp"
                        android:selectAllOnFocus="false" />

                    <TextView
                        android:id="@+id/tvAppointment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_marginLeft="@dimen/_10dp"
                        android:text="@string/tvAppointment"
                        android:textSize="@dimen/_18sp" />

                    <RadioGroup
                        android:id="@+id/radioGroupBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/rbPin_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10dp"
                            android:layout_marginTop="@dimen/_10dp"
                            android:layout_marginEnd="@dimen/_10dp"
                            android:text="@string/rbPincode"
                            android:textSize="@dimen/_18sp" />

                        <RelativeLayout
                            android:id="@+id/pincodeLayoutBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10dp"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/tvPin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_20dp"
                                android:layout_marginEnd="@dimen/_20dp"
                                android:layout_marginBottom="@dimen/_10dp"
                                android:text="@string/tvPin" />

                            <EditText
                                android:id="@+id/etPin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tvPin"
                                android:layout_marginStart="@dimen/_20dp"
                                android:layout_marginEnd="@dimen/_20dp"
                                android:background="@drawable/spinner_back"
                                android:ems="10"
                                android:hint="@string/_100001"
                                android:inputType="number"
                                android:padding="@dimen/_15dp" />
                        </RelativeLayout>

                        <RadioButton
                            android:id="@+id/rbDistrict"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10dp"
                            android:layout_marginEnd="@dimen/_10dp"
                            android:layout_marginBottom="@dimen/_10dp"
                            android:text="@string/rbDistrict"
                            android:textSize="@dimen/_18sp" />

                        <RelativeLayout
                            android:id="@+id/districtLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10dp"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/tvState"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_20dp"
                                android:layout_marginEnd="@dimen/_20dp"
                                android:layout_marginBottom="@dimen/_10dp"
                                android:text="@string/tvState" />

                            <Spinner
                                android:id="@+id/spState"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/tvState"
                                android:layout_marginStart="@dimen/_20dp"
                                android:layout_marginEnd="@dimen/_20dp"
                                android:layout_marginBottom="@dimen/_10dp"
                                android:spinnerMode="dropdown"
                                android:background="@drawable/spinner_back"
                                android:padding="@dimen/_15dp" />

                            <TextView
                                android:id="@+id/tvDistrict"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/spState"
                                android:layout_marginStart="20sp"
                                android:layout_marginEnd="20sp"
                                android:layout_marginBottom="10sp"
                                android:text="@string/tvDistrict" />

                            <Spinner
                                android:id="@+id/spDistrict"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/tvDistrict"
                                android:layout_marginStart="@dimen/_20dp"
                                android:layout_marginEnd="@dimen/_20dp"
                                android:layout_marginBottom="@dimen/_10dp"
                                android:spinnerMode="dropdown"
                                android:background="@drawable/spinner_back"
                                android:padding="@dimen/_15dp" />
                        </RelativeLayout>

                    </RadioGroup>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20dp"
                        android:layout_marginBottom="@dimen/_20dp">

                        <Button
                            android:id="@+id/btnCheck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="@dimen/_100dp"
                            android:layout_marginLeft="@dimen/_100dp"
                            android:background="@drawable/btn_background"
                            android:text="@string/btnCheck"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/cowinRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/_10dp"
                        android:text="@string/coWin"
                        android:textSize="@dimen/_18sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/ivDown"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:background="#EDE0FF"
                app:srcCompat="@drawable/avd_anim"
                android:visibility="gone"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tvResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:background="@drawable/btn_background"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/tvResults"
                android:textAlignment="center"
                android:textColor="#010101"
                android:textSize="@dimen/_35sp"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:id="@+id/resultsCardViewBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/_15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#EDE0FF">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvResult"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>